# mxt

./: .gitignore  CMakeLists.txt
fst/: CMakeLists.txt  driver.f90  kron.f90  matrix.f90  sparse_tucker.f90  sptensor.f90  utils.f90
include/: Config.hpp  DenseTensor.cuh  DeviceWorkspace.cuh  MatrixCollection.cuh  NormalizationSchemes.cuh  Normalizers.cuh  Profiler.hpp  Shape.cuh  SparseTensor.cuh  SymbolicTTMC.cuh  TtmcConfig.cuh  colors.h  common.cuh  mxt.cuh  sparse_tucker.cuh  tensor_io.cuh  ttmc.cuh  utils.cuh
include/kernels/: diag_scale.cuh  kernel_utils.cuh  normalization.cuh  spttmc.cuh  spttmc_schedule.cuh  strided_copy.cuh  transpose.cuh  unfolding_max.cuh
include/linalg/: dgmm.cuh  geam.cuh  gemm.cuh  norms.cuh  svd.cuh
include/rand/: rand_matrix.cuh
ptmc/: Normalizer.py  config.py  driver.py  norm_experiments.yaml  ordering_experiments.yaml  plot.py  recover.py  setup.py  ttmc.py
ptmc/cpp/: CMakeLists.txt  recover_kernel.cuh  recover_launcher.cu
scripts/: evil_tensor.py  matlab_to_dns.py  randn_tensor.py  randn_tensor_dense.py  tensorly_to_dns.py  tensorly_to_frostt.py  tucker.py  utils.py
src/: sparse_tucker.cu
test/: correctness.cu  driver.cu
test/correctness/: CMakeLists.txt  correctness.cu  test.yaml  ttmc.cu  ttmc.py  tucker_ref.py
test/correctness/cases/3D_12031/: core.tns  factor_0.tns  factor_1.tns  factor_2.tns
test/correctness/cases/kinetic/: core.tns  factor_0.tns  factor_1.tns  factor_2.tns  factor_3.tns
test/correctness/cases/randn4_scaled/: core.tns  factor_0.tns  factor_1.tns  factor_2.tns  factor_3.tns
test/correctness/cases/randn5/: core.tns  factor_0.tns  factor_1.tns  factor_2.tns  factor_3.tns  factor_4.tns
test/correctness/fst/: CMakeLists.txt  driver.f90  frostt_io.f90  kron.f90  sparse_tucker.f90  utils.f90
test/experiments/: 3D_12031.cu  CMakeLists.txt  configs.yaml  driver.cu  evil.cu  evil_fp16.cu  evil_fp16_big.cu  evil_fp16_overflow.cu  evil_tensor.py  file_generator.py  indian_pines.cu  kinetic.cu  main.cu  miranda.cu  nips.cu  randn.cu  run.cuh  run_ttmc.cuh  ttmc_configs.yaml  uber.cu
